--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           >
           <ul class="header-nav-list">
             <li class="nav-header-item">
-              <a class="item-nav-link" href="./index.html">Portfolio</a>
+              <a class="item-nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-header-item">
-              <a class="item-nav-link" href="">Studio</a>
+              <a class="item-nav-link" href="">Portfolio</a>
             </li>
             <li class="nav-header-item">
               <a class="item-nav-link" href="">Contacts</a>
@@ -72,6 +72,11 @@
           <h2 class="visually-hidden">Content</h2>
           <ul class="content-list">
             <li class="content-list-item">
+              <div class="content-icon-container">
+                <svg class="content-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="content-item-title">Strategy</h3>
               <p class="content-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,11 @@
               </p>
             </li>
             <li class="content-list-item">
+              <div class="content-icon-container">
+                <svg class="content-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock "></use>
+                </svg>
+              </div>
               <h3 class="content-item-title">Punctuality</h3>
               <p class="content-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,13 +96,23 @@
               </p>
             </li>
             <li class="content-list-item">
+              <div class="content-icon-container">
+                <svg class="content-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="content-item-title">Diligence</h3>
-              <p class="content-item-text">
+              <p>
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
             <li class="content-list-item">
+              <div class="content-icon-container">
+                <svg class="content-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="content-item-title">Technologies</h3>
               <p class="content-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -120,6 +140,37 @@
               <div class="team-info">
                 <h3 class="team-item-title">Mark Guerrero</h3>
                 <p class="team-item-text">Product Designer</p>
+
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -132,6 +183,37 @@
               <div class="team-info">
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
+
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -144,6 +226,37 @@
               <div class="team-info">
                 <h3 class="team-item-title">Camila Garcia</h3>
                 <p class="team-item-text">Marketing</p>
+
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -156,6 +269,37 @@
               <div class="team-info">
                 <h3 class="team-item-title">Daniel Wilson</h3>
                 <p class="team-item-text">UI Designer</p>
+
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="#" class="team-icon-link">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -170,47 +314,108 @@
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="banking-app"
-                width="360"
-              />
-
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/portfolio/banking-app.jpg"
+                  alt="banking-app"
+                  width="360"
+                />
+                <p class="image-container-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolion-info">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img src="./images/cashless.jpg" alt="cashless" width="360" />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/portfolio/cashless.jpg"
+                  alt="banking-app"
+                  width="360"
+                />
+                <p class="image-container-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolion-info">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img src="./images/notebook.jpg" alt="notebook" width="360" />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/portfolio/notebook.jpg"
+                  alt="banking-app"
+                  width="360"
+                />
+                <p class="image-container-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolion-info">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img src="./images/car.jpg" alt="car" width="360" />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/portfolio/car.jpg"
+                  alt="banking-app"
+                  width="360"
+                />
+                <p class="image-container-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolion-info">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img src="./images/phone.jpg" alt="phone" width="360" />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/portfolio/phone.jpg"
+                  alt="banking-app"
+                  width="360"
+                />
+                <p class="image-container-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolion-info">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img src="./images/girl.jpg" alt="girl" width="360" />
+              <div class="portfolio-image-container">
+                <img
+                  src="./images/portfolio/girl.jpg"
+                  alt="banking-app"
+                  width="360"
+                />
+                <p class="image-container-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolion-info">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
@@ -224,14 +429,49 @@
     </main>
 
     <footer class="footer-section">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-studio-span">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-container-left">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-studio-span">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-container-right">
+          <p class="footer-title-media">Social media</p>
+          <ul class="footer-icon-list">
+            <li class="footer-item-icon">
+              <a href="#" class="footer-icon-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item-icon">
+              <a href="#" class="footer-icon-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item-icon">
+              <a href="#" class="footer-icon-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item-icon">
+              <a href="#" class="footer-icon-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
